ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/issuer: "le-dns01-cloudflare-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.norsse.org
    secretName: nginx-tls
  rules:
  - host: app.norsse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginxservice
            port:
              number: 80
